# pa-ai-workbench

./: .dockerignore  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  DEV_SPEC.md  LICENSE  Makefile  PA_AI_WORKBENCH_DAY1_MVP_SPEC.md  PHASE2_SPEC.md  PHASE3_SPEC.md  PHASE4_SPEC.md  PHASE5_SPEC.md  PRODUCT_SPEC.md  README.md  THIRD_PARTY_NOTICES.md  compose.yaml  docker-compose.dev.yml  docker-compose.yml  package.json  pnpm-workspace.yaml  pyproject.toml
agent/: __init__.py  schemas.py
apps/: COMPATIBILITY.md
apps/pa-api/: .env.example  pyproject.toml
apps/pa-api/app/: __init__.py  config.py  database.py  models.py  pathing.py
apps/pa-api/app/api/: citations.py  history.py  mcp.py  native_audit.py  native_status.py  organization.py  vector_store.py  web_search.py
apps/pa-api/app/services/: conversation_service.py  data_source_service.py  document_service.py  generation_service.py  history_service.py  knowledge_base_service.py  mcp_service.py  native_chat_service.py  rag_service.py  vector_store_service.py  wiki_service.py
apps/pa-api/app/storage/: file_store.py
apps/pa-api/fixtures/: agent_faithfulness_m3.json  rag_quality_evaluation_m3.json
apps/pa-api/fixtures/phase4_rag_wiki_qa/: hit_matrix.md  questions.json
apps/pa-api/fixtures/phase4_rag_wiki_qa/documents/: 003_data_retention_audit_rules.md  004_external_publication_rules.md  007_ingestion_qa_faq.md
backend/: .env.example  requirements.txt
cli/: go.mod  go.sum
client/: README.md  client.go  knowledgebase.go
config/: builtin_agents.yaml
docreader/: config.py
docs/: README.md  (+32 more)
(+929 files in other folders)
